--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines (until baseurl:)
   This Hosted Portal of the Belgian Biodiversity Platform let you explore the Open Biodiversity Data shared via the GBIF network.
   Occurrences records come mostly from Belgian Institutions, Public authorities, Scientists and Citizens, but also from data rapatriated from abroad.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://gbif-be.hp.gbif.org/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://gbif.biodiversity.be" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Biodiversity_be # if you have an account you want to link to. Else comment this line out
 github_username: andrejjh # if you have an account you want to link to. Else comment this line out
 
