--- a/_data/fr/footer.yml
+++ b/_data/fr/footer.yml
@@ -5,7 +5,8 @@
 columns:
   - name: Contactez nous
     description: | # Can be Markdown
-      [contact@biodiversity.be](mailto:contact@biodiversity.be)![BBPf](/assets/images/logos/logoBBPf.png){:height="60px" width="120px"}
+      [<i class="fa fa-envelope"></i> contact@biodiversity.be](mailto:contact@biodiversity.be)
+      <br>![BBPf](/assets/images/logos/logoBBPf.png){:height="60px" width="120px"}
 
     connectIcons: true
 
