fixing community(communauté) links in french

--- a/_data/fr/navigation.yml
+++ b/_data/fr/navigation.yml
@@ -4,7 +4,7 @@
   menu:
     - text: Qu'est-ce que GBIF.be?
       href: /fr/about
-    - text: Communité
+    - text: Communauté
       href: /fr/community
     - text: Services
       href: /fr/services
