--- a/_data/GBIFdataUse.yml
+++ b/_data/GBIFdataUse.yml
@@ -5,7 +5,7 @@ title: "Recent Data Use"
 id: "stories-data-use"
 
 # Description (Optional)
-description: This shows the three most recent items, see [all items on gbif.org](https://www.gbif.org/resource/search?contentType=dataUse&countriesOfCoverage=US&countriesOfCoverage=UM&countriesOfCoverage=AS&countriesOfCoverage=FM&countriesOfCoverage=GU&countriesOfCoverage=MH&countriesOfCoverage=MP&countriesOfCoverage=PR&countriesOfCoverage=PW&countriesOfCoverage=VI)
+description: This shows the three most recent items, see [all items on gbif.org](https://www.gbif.org/resource/search?contentType=dataUse&countriesOfCoverage=BE)
 
 # Filters
 # Use these options to tailor the content displayed in your block.
