--- a/_data/GBIFnews.yml
+++ b/_data/GBIFnews.yml
@@ -5,7 +5,7 @@ title: "Recent News"
 id: "stories-news"
 
 # Description (Optional)
-description: This shows the three most recent items, see [all on gbif.org](https://www.gbif.org/resource/search?contentType=news&countriesOfCoverage=US&countriesOfCoverage=UM&countriesOfCoverage=AS&countriesOfCoverage=FM&countriesOfCoverage=GU&countriesOfCoverage=MH&countriesOfCoverage=MP&countriesOfCoverage=PR&countriesOfCoverage=PW&countriesOfCoverage=VI)
+description: This shows the three most recent items, see [all on gbif.org](https://www.gbif.org/resource/search?contentType=news&countriesOfCoverage=BE)
 
 # Filters
 # Use these options to tailor the content displayed in your block.
