--- a/_data/fr/GBIFnews.yml
+++ b/_data/fr/GBIFnews.yml
@@ -5,7 +5,7 @@ title: "Actualités"
 id: "stories-news"
 
 # Description (Optional)
-description: Voici les trois derniers articles, voir [tous les articles sur gbif.org](https://www.gbif.org/resource/search?contentType=news&countriesOfCoverage=US&countriesOfCoverage=UM&countriesOfCoverage=AS&countriesOfCoverage=FM&countriesOfCoverage=GU&countriesOfCoverage=MH&countriesOfCoverage=MP&countriesOfCoverage=PR&countriesOfCoverage=PW&countriesOfCoverage=VI)
+description: Voici les trois derniers articles, voir [tous les articles sur gbif.org](https://www.gbif.org/resource/search?contentType=news&countriesOfCoverage=BE)
 
 # Filters
 # Use these options to tailor the content displayed in your block.
