--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -1,43 +1,54 @@
 relatedPosts:
   en: "Related Posts"
   fr: "Articles connexes"
+  nl: "Related Posts"
 
 differentLanguage:
   en: "Read this page in a different language"
   fr: "Lisez cette page dans une autre langue"
+  nl: "Read this page in a different language"
 
 tocTitle:
   en: "On this page"
   fr: "Sur cette page"
+  nl: "On this page"
 
 terms:
   en: |
     We use cookies on our website. Some are technically necessary, others help us improve your user experience. You can decline non-essential cookies by selecting “Reject”. Please see our [Privacy Policy](/privacy) for further information about our privacy practices and use of cookies.
   fr: |
     Nous utilisons des cookies sur notre site Web. Certains sont techniquement nécessaires, d'autres nous aident à améliorer votre expérience utilisateur. Vous pouvez refuser les cookies non essentiels en sélectionnant "Refuser". Veuillez consulter notre [Politique de confidentialité](/privacy) pour plus d'informations sur nos pratiques en matière de confidentialité et l'utilisation des cookies.
+  nl: |
+    We use cookies on our website. Some are technically necessary, others help us improve your user experience. You can decline non-essential cookies by selecting “Reject”. Please see our [Privacy Policy](/privacy) for further information about our privacy practices and use of cookies.
 
 acceptTerms:
-  en: 'Accept'
-  fr: 'Accepter'
+  en: "Accept"
+  fr: "Accepter"
+  nl: "Accept"
 
 rejectTerms:
-  en: 'Reject'
-  fr: 'Rejeter'
+  en: "Reject"
+  fr: "Rejeter"
+  nl: "Accept"
 
 # Used by the stories block type
 contentTypes:
   DataUse:
-    en: 'Data use'
-    fr: 'Utilisation des données'
+    en: "Data use"
+    fr: "Utilisation des données"
+    nl: "Data use"
 
   News:
-    en: 'News'
-    fr: 'Actualités'
+    en: "News"
+    fr: "Actualités"
+    nl: "News"
 
   Event:
-    en: 'Event'
-    fr: 'Événement'
+    en: "Event"
+    fr: "Événement"
+    nl: "Event"
 
   Literature:
-    en: 'Literature'
-    fr: 'Littérature'
+    en: "Literature"
+    fr: "Littérature"
+    nl: "Literatuur"
