--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -1,17 +1,17 @@
 relatedPosts:
   en: "Related Posts"
   fr: "Articles connexes"
-  nl: "Related Posts"
+  nl: "Gerelateerd nieuws"
 
 differentLanguage:
-  en: "Read this page in a different language"
-  fr: "Lisez cette page dans une autre langue"
-  nl: "Read this page in a different language"
+  en: "Other language"
+  fr: "Autre langue"
+  nl: "Andere talen"
 
 tocTitle:
   en: "On this page"
   fr: "Sur cette page"
-  nl: "On this page"
+  nl: "Op deze pagina"
 
 terms:
   en: |
@@ -19,34 +19,34 @@ terms:
   fr: |
     Nous utilisons des cookies sur notre site Web. Certains sont techniquement nécessaires, d'autres nous aident à améliorer votre expérience utilisateur. Vous pouvez refuser les cookies non essentiels en sélectionnant "Refuser". Veuillez consulter notre [Politique de confidentialité](/privacy) pour plus d'informations sur nos pratiques en matière de confidentialité et l'utilisation des cookies.
   nl: |
-    We use cookies on our website. Some are technically necessary, others help us improve your user experience. You can decline non-essential cookies by selecting “Reject”. Please see our [Privacy Policy](/privacy) for further information about our privacy practices and use of cookies.
+    Wij gebruiken cookies op onze website. Sommige zijn technisch noodzakelijk, andere helpen ons uw gebruikerservaring te verbeteren. Niet-essentiële cookies kunt u weigeren door ‘Weigeren’ te selecteren. Zie ons [Privacybeleid](/privacy) voor meer informatie over onze privacypraktijken en het gebruik van cookies.
 
-acceptTerms:
+    acceptTerms:
   en: "Accept"
   fr: "Accepter"
-  nl: "Accept"
+  nl: "Accepteren"
 
 rejectTerms:
   en: "Reject"
   fr: "Rejeter"
-  nl: "Accept"
+  nl: "Weigeren"
 
 # Used by the stories block type
 contentTypes:
   DataUse:
     en: "Data use"
     fr: "Utilisation des données"
-    nl: "Data use"
+    nl: "Gegevens gebruik"
 
   News:
     en: "News"
     fr: "Actualités"
-    nl: "News"
+    nl: "Nieuws"
 
   Event:
     en: "Event"
     fr: "Événement"
-    nl: "Event"
+    nl: "Evenement"
 
   Literature:
     en: "Literature"
