--- a/_config.yml
+++ b/_config.yml
@@ -48,9 +48,9 @@ privacy:
 algae:
   rootLang: en
   # latestPostLimit: 2
-  logo: /assets/images/logos/node-green.png
+  logo: /assets/images/logos/gbif-be-logo.png
   # Logo in navbar, will be displayed with 28px height
-  logoAndTitle: true # include the title next to the logo
+  logoAndTitle: false # include the title next to the logo
   archive_permalink: /news/ # Permalink of page using archive.html layout, required when using post categories
   style:
     square: false # Should corners be square or rounded
