voorkomens instead of gegevens

--- a/_data/nl/navigation.yml
+++ b/_data/nl/navigation.yml
@@ -17,7 +17,7 @@
 
 - text: Ontdekken
   menu:
-    - text: Gegevens
+    - text: Voorkomens
       href: /nl/occurrence/search
     - text: Datasets
       href: /nl/dataset/search
