--- a/_data/nl/examples.yml
+++ b/_data/nl/examples.yml
@@ -5,7 +5,7 @@ stats:
   #  See [`_data/compose/examples.yml`](https://github.com/gbif/jekyll-theme-algae/blob/master/_data/compose/examples.yml#L72) for the content structure.
   features:
     - title: <span data-ajax-url="https://api.gbif.org/v1/occurrence/search?country=BE&limit=0"></span>
-      description: Gegevens
+      description: Voorkomens
       background: /assets/images/icons/occurrence.svg
       href: /occurrence/search
     - title: <span data-ajax-url="https://api.gbif.org/v1/dataset/search?publishingCountry=BE&limit=0"></span>
